--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@swimlane/ngx-charts": "^13.0.2",
+    "angular-cli-ghpages": "^0.6.2",
     "hammerjs": "^2.0.8",
     "ol": "^6.1.1",
     "proj4": "^2.6.0",
